# TuringMachine

./: CMakeLists.txt  LICENSE  README.md
fla-project/lib/: PDASim.h  PDATrans.h  TMParser.h  TMSim.h  common.h
fla-project/src/: TMParser.cpp  main.cpp
